fix cover image skew on mobile

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -87,7 +87,7 @@
 .ab-hero-marble {
   position: absolute;
   inset: 0;
-  background-image: url("%PUBLIC_URL%/images/marbled-8050572_1280.png");
+  background-image: var(--marble-bg);
   background-size: cover;
   background-position: center;
   transform: scale(1.05);
@@ -215,7 +215,7 @@
   position: absolute;
   inset: -16px;
   border-radius: 24px;
-  background-image: url("%PUBLIC_URL%/images/marbled-8050572_1280.png");
+  background-image: var(--marble-bg);
   background-size: cover;
   background-position: center;
   opacity: 0.25;
@@ -263,7 +263,7 @@
 .ab-values-marble {
   position: absolute;
   inset: 0;
-  background-image: url("%PUBLIC_URL%/images/marbled-8050572_1280.png");
+  background-image: var(--marble-bg);
   background-size: cover;
   background-position: center 40%;
   filter: brightness(0.3) saturate(0.6);
@@ -406,7 +406,7 @@
 .ab-cta-marble {
   position: absolute;
   inset: 0;
-  background-image: url("%PUBLIC_URL%/images/marbled-8050572_1280.png");
+  background-image: var(--marble-bg);
   background-size: cover;
   background-position: center;
 }
